# bothunter

./: .env.example  .gitignore  README.md  pyproject.toml
docs/features/: cloudflare_graphql_notes.md
docs/plans/: blocked_report_plan.md
src/bothunter/: bots.json  cli.py
